<resources>
    <string name="app_name">ICE</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="account">account</string>
    <string name="phone_number">phone number</string>
    <string name="next">Next</string>
    <string name="logo">Logo</string>
    <string name="title">Title</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="back">back</string>
    <string name="parent">parent</string>
    <string name="children">children</string>
    <string name="success">success!</string>
    <string name="finish">finish</string>
    <string name="mission_success">mission success!</string>
    <string name="log_out">log out</string>
    <string name="title_activity_child_draw">Child_draw</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main_child">MainChildActivity</string>
    <string name="my_wish">My wish</string>
    <string name="my_collection">My collection</string>
    <string name="home">Home</string>
    <string name="mission">My mission</string>
    <string name="joe">Joe</string>
    <string name="title_activity_wish">WishActivity</string>
    <string name="check">Check !</string>
    <string name="wait">Wait</string>
    <string name="cancel">cancel</string>
    <string name="done">Done</string>
    <string name="rule_eat">DO NOT play cellphone when EAT !</string>
    <string name="new_mission">NEW</string>
    <string name="rule_walk">Do NOT play cellphone when WALK !</string>
    <string name="title_activity_main_parent">MainParentActivity</string>
    <string name="hey_joe_s_mom">Hey Joe\'s mom!</string>
    <string name="joe_s_wish">Joe\'s wish</string>
    <string name="joe_s_gift">Joe\'s gift</string>
    <string name="joe_s_mission">Joe\'s mission</string>
    <string name="fail">Fail</string>
    <string name="ok">Ok</string>
</resources>
