<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/edit_text_account"
        android:layout_width="164dp"
        android:layout_height="28dp"
        android:width="3dp"
        android:hint="@string/username"
        android:background="#FFFFFF"
        android:inputType="textPersonName"
        android:textColor="#A790A5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="164dp"
        android:layout_height="28dp"
        android:width="3dp"
        android:hint="@string/password"
        android:background="#FFFFFF"
        android:text="@string/password"
        android:inputType="textPassword"
        android:textColor="#A790A5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/edit_text_number"
        android:layout_width="164dp"
        android:layout_height="28dp"
        android:width="3dp"
        android:hint="@string/phone_number"
        android:background="#FFFFFF"
        android:inputType="number"
        android:text="@string/phone_number"
        android:textColor="#A790A5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64"
        tools:ignore="LabelFor,MissingConstraints" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="73dp"
        android:layout_height="29dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="#E8EAE1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="71dp"
        android:layout_height="28dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="#E8EAE1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>