<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Choose"
    android:background="#C6B4D9">

    <ImageView
        android:id="@+id/image"
        android:layout_width="189dp"
        android:layout_height="218dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/icon_parent_children"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_parent"
        android:layout_width="105dp"
        android:layout_height="31dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/parent"
        android:textColor="#E8EAE1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_child"
        android:layout_width="106dp"
        android:layout_height="33dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/children"
        android:textColor="#E8EAE1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>