<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#C6B4D9">

    <EditText
            android:id="@+id/edit_text_account"
            android:layout_width="164dp"
            android:layout_height="28dp"
            android:width="3dp"
            android:text="@string/account"
            android:autofillHints="username"
            android:background="#FFFFFF"
            android:inputType="textPersonName"
            android:textColor="#A790A5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499"
            tools:ignore="LabelFor,MissingConstraints" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="164dp"
            android:layout_height="28dp"
            android:width="3dp"
            android:autofillHints="username"
            android:background="#FFFFFF"
            android:inputType="textPassword"
            android:text="@string/password"
            android:textColor="#A790A5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.567"
            tools:ignore="LabelFor,MissingConstraints" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="#E8EAE1"
            android:onClick="SignUpOnClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.862"
            tools:ignore="MissingConstraints,OnClick" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="#E8EAE1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.762"
            tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>