<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainParentActivity"
        android:background="#E7DEFF">

        <Button
            android:id="@+id/button_circle_on_monster"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.590"
            tools:ignore="MissingConstraints,OnClick" />

        <com.example.ice.Views.ParentView
            android:id="@+id/parentview_idd"
            android:layout_width="410dp"
            android:layout_height="571dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button_add_mission"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:background="#A0DFE2"
            android:text="@string/new_mission"
            android:textColor="#69769B"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.103"
            tools:ignore="MissingConstraints,OnClick" />

        <Button
            android:id="@+id/button_finish"
            android:layout_width="45dp"
            android:layout_height="23dp"
            android:background="#A0DFE2"
            android:gravity="center"
            android:text="@string/finish"
            android:textColor="#E8EAE1"
            android:textSize="13sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.345"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.356"
            tools:ignore="MissingConstraints,OnClick" />

        <Button
            android:id="@+id/button_fail"
            android:layout_width="45dp"
            android:layout_height="23dp"
            android:background="#A0DFE2"
            android:gravity="center"
            android:text="@string/fail"
            android:textColor="#E8EAE1"
            android:textSize="13sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.654"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.357"
            tools:ignore="MissingConstraints,OnClick" />

        <EditText
            android:id="@+id/edit_set_mission"
            android:layout_width="167dp"
            android:layout_height="125dp"
            android:width="3dp"
            android:background="#FFFFFF"
            android:gravity="left"
            android:inputType="textMultiLine"
            android:textColor="#A790A5"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.192"
            tools:ignore="LabelFor,MissingConstraints,RtlHardcoded" />

        <include
            layout="@layout/app_bar_main_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/nav_view"
        android:orientation="horizontal"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        tools:ignore="RtlHardcoded"
        android:baselineAligned="false">

        <include
            layout="@layout/nav_header_main_parent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
