<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainChildActivity"
        android:background="#E7DEFF">

        <Button
            android:id="@+id/button_circle_on_monster"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.590"
            tools:ignore="MissingConstraints,OnClick" />

        <com.example.ice.Views.ChildView
            android:id="@+id/childview_idd"
            android:layout_width="410dp"
            android:layout_height="571dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button_fin"
            android:layout_width="151dp"
            android:layout_height="55dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:textColor="#E8EAE1"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.155"
            tools:ignore="MissingConstraints,OnClick" />

        <Button
            android:id="@+id/button_gift_check"
            android:layout_width="101dp"
            android:layout_height="33dp"
            android:background="#D1A0E2"
            android:gravity="center"
            android:text="@string/check"
            android:textColor="#E8EAE1"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.764"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.373"
            tools:ignore="MissingConstraints,OnClick" />

        <Button
            android:id="@+id/button_gift_wait"
            android:layout_width="101dp"
            android:layout_height="33dp"
            android:background="#D1A0E2"
            android:gravity="center"
            android:text="@string/wait"
            android:textColor="#E8EAE1"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.206"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.373"
            tools:ignore="MissingConstraints,OnClick" />

        <TextView
            android:id="@+id/text_rule_eat"
            android:layout_width="200dp"
            android:layout_height="151dp"
            android:background="#FFFFFF"
            android:text="@string/rule_eat"
            android:gravity="center"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.912" />


        <include
            layout="@layout/app_bar_main_child"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="-75dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/nav_view"
        android:orientation="horizontal"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        tools:ignore="RtlHardcoded"
        android:baselineAligned="false">

        <include
            layout="@layout/nav_header_main_child"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
